# CV_OpenCV-University-Computer-Vision

./: Untitled.ipynb  pyproject.toml
Mastering-OpenCV-Python/Module_1-Getting-Started-With-Images/: 01_01_Reading_Displaying_Saving_Images.ipynb  01_04_Annotating_Images.ipynb
Mastering-OpenCV-Python/Module_1-Getting-Started-With-Images/.ipynb_checkpoints/: 01_01_Reading_Displaying_Saving_Images-checkpoint.ipynb
Mastering-OpenCV-Python/Setup/: main.py
Pycharm/: PyCharm_Demo.py  README.md
